list first stage complete

--- a/simple-crud/ClientApp/src/components/Novelties.css
+++ b/simple-crud/ClientApp/src/components/Novelties.css
@@ -6,8 +6,9 @@ div.list-container {
     user-select: none;
 }
 
-div.list-button {
+div.list-button, a.page-link {
     cursor: pointer;
+    user-select: none;
 }
 
 div.list-last-col {
