crud somewhat completed poc

--- a/simple-crud/ClientApp/src/components/Novelties.css
+++ b/simple-crud/ClientApp/src/components/Novelties.css
@@ -31,3 +31,12 @@ nav.pagination-container {
 ul.pagination > li.active {
     color: aqua;
 }
+
+div.delete-container {
+    display: inline;
+    margin-left: 1em;
+}
+
+div.delete-container :hover {
+    color: crimson;
+}
